--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "shazaib munawar",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "nedb": "^1.8.0",
     "nodemon": "^2.0.19"
